[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "guardpilot"
version = "1.0.0"
description = "AI Agent Behavior Compliance Rule Engine - A lightweight CLI tool for ensuring AI/LLM agents follow defined behavioral guidelines."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "GuardPilot Team"},
]
keywords = ["ai", "compliance", "llm", "agent", "rules", "guardrails"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.scripts]
guardpilot = "guardpilot.cli:main"

[tool.setuptools.packages.find]
include = ["guardpilot*"]
